--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medchain:-ai-&-blockchain-medical-records",
+  "name": "medchain-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,10 +8,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^19.2.3",
+    "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@google/genai": "^1.33.0",
-    "react-dom": "^19.2.3",
     "recharts": "^3.5.1",
     "lucide-react": "^0.560.0"
   },
