--- a/national-health-record-ledger/off-chain/api-gateway/package.json
+++ b/national-health-record-ledger/off-chain/api-gateway/package.json
@@ -1,9 +1,11 @@
 {
   "name": "api-gateway",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hyperledger Fabric REST API Gateway for Medical Records",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,8 +17,8 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
-    "ethers": "^6.16.0",
     "express": "^5.2.1",
+    "fabric-ca-client": "^2.2.20",
     "fabric-network": "^2.2.20",
     "sqlite3": "^5.1.7",
     "undici": "^7.18.2",
