--- a/national-health-record-ledger/on-chain/ethereum/package.json
+++ b/national-health-record-ledger/on-chain/ethereum/package.json
@@ -14,6 +14,14 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.19.0"
   },
-  "keywords": ["ethereum", "blockchain", "medical-records", "solidity"],
-  "license": "MIT"
+  "keywords": [
+    "ethereum",
+    "blockchain",
+    "medical-records",
+    "solidity"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^17.2.3"
+  }
 }
